test/compile_errors/stage1/obj/add_wrap_assign_on_undefined_value.zig
comptime {
    var a: i64 = undefined;
    a +%= a;
}

// add wrap assign on undefined value
//
// tmp.zig:3:5: error: use of undefined value here causes undefined behavior
